<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:id="@+id/container_login_dialog"
        android:layout_width="@dimen/dimen_0"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dimen_22"
        android:layout_marginTop="@dimen/dimen_24"
        android:layout_marginEnd="@dimen/dimen_22"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <RelativeLayout
            android:id="@+id/layout_content_header_login_dialog"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/radiusTop">

            <com.google.android.material.imageview.ShapeableImageView
                android:id="@+id/image_view_icon_login_dialog"
                android:layout_width="@dimen/app_icon_size_medium"
                android:layout_height="@dimen/app_icon_size_medium"
                android:layout_alignParentStart="true"
                android:layout_centerInParent="true"
                app:srcCompat="@drawable/ic_baseline_security"
                tools:ignore="ImageContrastCheck" />

            <TextView
                android:id="@+id/text_view_title_dialog_login"
                style="@style/Theme.MaterialDialog.Title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:layout_marginStart="@dimen/margin_spacing_min"
                android:layout_marginTop="0dp"
                android:layout_toEndOf="@id/image_view_icon_login_dialog"
                android:gravity="start"
                android:text="@string/label_text_login" />

        </RelativeLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/text_input_layout_username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/paddingTop"
            android:hint="@string/label_text_username"
            app:boxCornerRadiusBottomEnd="@dimen/dimen_10"
            app:boxCornerRadiusBottomStart="@dimen/dimen_10"
            app:boxCornerRadiusTopEnd="@dimen/dimen_10"
            app:boxCornerRadiusTopStart="@dimen/dimen_10"
            app:endIconMode="clear_text"
            app:errorEnabled="true"
            app:helperText="@string/label_text_username_helper"
            app:helperTextEnabled="true">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/text_input_edit_text_username"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:imeOptions="actionNext"
                android:inputType="text"
                tools:ignore="TextContrastCheck,VisualLintTextFieldSize,SpeakableTextPresentCheck,TouchTargetSizeCheck" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/text_input_layout_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/dimen_18"
            android:hint="@string/label_text_password"
            app:boxCornerRadiusBottomEnd="@dimen/dimen_10"
            app:boxCornerRadiusBottomStart="@dimen/dimen_10"
            app:boxCornerRadiusTopEnd="@dimen/dimen_10"
            app:boxCornerRadiusTopStart="@dimen/dimen_10"
            app:endIconMode="password_toggle"
            app:errorEnabled="true"
            app:helperText="@string/label_text_password_helper"
            app:helperTextEnabled="true">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/text_input_edit_text_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:imeOptions="actionDone"
                android:inputType="textPassword"
                tools:ignore="TextContrastCheck,VisualLintTextFieldSize,SpeakableTextPresentCheck,TouchTargetSizeCheck" />

        </com.google.android.material.textfield.TextInputLayout>

    </LinearLayout>

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:layout_width="@dimen/dimen_0"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dimen_8"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/container_login_dialog">

        <include
            android:id="@+id/login_actions"
            layout="@layout/m_alert_dialog_actions_v2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </androidx.coordinatorlayout.widget.CoordinatorLayout>

</androidx.constraintlayout.widget.ConstraintLayout>