<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="@dimen/paddingTop">

    <RelativeLayout
        android:id="@+id/layout_content_header_code_alert_dialog"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.imageview.ShapeableImageView
            android:id="@+id/image_view_icon_code_alert_dialog"
            android:layout_width="@dimen/app_icon_size_medium"
            android:layout_height="@dimen/app_icon_size_medium"
            android:layout_alignParentStart="true"
            android:layout_centerInParent="true"
            app:srcCompat="@drawable/ic_baseline_shield_key"
            tools:ignore="ImageContrastCheck" />

        <TextView
            android:id="@+id/text_view_title_dialog_code_alert"
            style="@style/Theme.MaterialDialog.Title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_marginStart="@dimen/margin_spacing_min"
            android:layout_marginTop="0dp"
            android:layout_toEndOf="@id/image_view_icon_code_alert_dialog" />

    </RelativeLayout>

    <TextView
        android:id="@+id/text_view_message_dialog_code_alert"
        style="@style/Theme.MaterialDialog.Message"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/text_view_title_code_dialog_code_alert"
        style="@style/Theme.MaterialDialog.Title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="0dp"
        android:paddingEnd="0dp"
        android:textSize="@dimen/text_message_code_size"
        tools:text="@string/label_text_enter_the_code" />

    <com.github.leodan11.customview.widget.PinView
        android:id="@+id/otpTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/radiusTop"
        android:layout_marginBottom="@dimen/radiusTop"
        android:gravity="center"
        android:textStyle="bold"
        app:pinPadding="@dimen/dimen_2" />

    <LinearLayout
        android:id="@+id/container_inputs"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_spacing_min"
        android:layout_marginBottom="@dimen/margin_spacing_min"
        android:orientation="vertical">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/text_input_layout_code_decimal_number"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/dimen_16"
            android:visibility="gone"
            app:boxCornerRadiusBottomEnd="@dimen/dimen_10"
            app:boxCornerRadiusBottomStart="@dimen/dimen_10"
            app:boxCornerRadiusTopEnd="@dimen/dimen_10"
            app:boxCornerRadiusTopStart="@dimen/dimen_10"
            app:endIconMode="clear_text"
            app:errorEnabled="true">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/text_input_edit_text_code_decimal_number"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:imeOptions="actionDone"
                tools:ignore="TextContrastCheck" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/text_input_layout_code_percentage"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/dimen_16"
            android:visibility="gone"
            app:boxCornerRadiusBottomEnd="@dimen/dimen_10"
            app:boxCornerRadiusBottomStart="@dimen/dimen_10"
            app:boxCornerRadiusTopEnd="@dimen/dimen_10"
            app:boxCornerRadiusTopStart="@dimen/dimen_10"
            app:endIconMode="clear_text"
            app:errorEnabled="true">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/text_input_edit_text_code_percentage"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:imeOptions="actionDone"
                tools:ignore="TextContrastCheck" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/text_input_layout_code_reason"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/label_text_reason_hint"
            app:boxCornerRadiusBottomEnd="@dimen/dimen_10"
            app:boxCornerRadiusBottomStart="@dimen/dimen_10"
            app:boxCornerRadiusTopEnd="@dimen/dimen_10"
            app:boxCornerRadiusTopStart="@dimen/dimen_10"
            app:endIconMode="clear_text"
            app:errorEnabled="true"
            app:helperText="@string/label_text_reason_helper">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/text_input_edit_text_code_reason"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:imeOptions="actionDone"
                android:inputType="textMultiLine"
                tools:ignore="TextContrastCheck,VisualLintTextFieldSize,SpeakableTextPresentCheck,TouchTargetSizeCheck" />

        </com.google.android.material.textfield.TextInputLayout>

    </LinearLayout>

    <com.github.leodan11.customview.layout.ButtonBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="bottom"
        android:layoutDirection="locale"
        android:orientation="horizontal"
        android:paddingTop="@dimen/dimen_10"
        android:paddingBottom="@dimen/dimen_4">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/button_action_negative_alert_dialog_code"
            style="?attr/buttonBarNegativeButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/button_negative_speakable_text_value"
            android:fontFamily="@font/montserrat_semi_bold" />

        <Space
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_weight="1" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/button_action_positive_alert_dialog_code"
            style="?attr/buttonBarPositiveButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/button_positive_speakable_text_value"
            android:fontFamily="@font/montserrat_semi_bold" />

    </com.github.leodan11.customview.layout.ButtonBarLayout>

</LinearLayout>