<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="@dimen/dimen_0"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <RelativeLayout
            android:id="@+id/headerHolderAlertDialog"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:gravity="center"
                android:orientation="vertical"
                tools:ignore="UselessParent">

                <com.airbnb.lottie.LottieAnimationView
                    android:id="@+id/animationViewAlertDialog"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/dialog_image_view_notification_icon_height_large"
                    android:visibility="gone"
                    app:lottie_autoPlay="true"
                    app:lottie_loop="true" />

                <com.google.android.material.imageview.ShapeableImageView
                    android:id="@+id/imageViewBitmapAlertDialog"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/dialog_image_view_notification_icon_height_large"
                    android:layout_gravity="center"
                    android:scaleType="centerCrop"
                    android:visibility="gone" />

                <com.google.android.material.imageview.ShapeableImageView
                    android:id="@+id/imageViewIconAlertDialog"
                    android:layout_width="@dimen/notification_icon_width"
                    android:layout_height="@dimen/notification_icon_height"
                    android:layout_gravity="center"
                    android:layout_marginTop="@dimen/margin_spacing" />

            </LinearLayout>

        </RelativeLayout>

        <TextView
            android:id="@+id/textViewTitleAlertDialog"
            style="@style/Theme.MaterialDialog.Title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_spacing"
            android:layout_marginEnd="@dimen/margin_spacing" />

        <TextView
            android:id="@+id/textViewMessageAlertDialog"
            style="@style/Theme.MaterialDialog.Message"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_spacing"
            android:layout_marginEnd="@dimen/margin_spacing"
            android:layout_marginBottom="@dimen/margin_spacing_medium" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin_spacing">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/buttonActionNegativeAlertDialog"
                style="?attr/buttonBarNegativeButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/button_negative_speakable_text_value"
                android:fontFamily="@font/montserrat_semi_bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/buttonActionNeutralAlertDialog"
                    style="?attr/buttonBarNeutralButtonStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginEnd="@dimen/margin_spacing_min"
                    android:contentDescription="@string/button_neutral_speakable_text_value"
                    android:fontFamily="@font/montserrat_semi_bold" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/buttonActionPositiveAlertDialog"
                    style="?attr/buttonBarPositiveButtonStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:contentDescription="@string/button_positive_speakable_text_value"
                    android:fontFamily="@font/montserrat_semi_bold" />

            </LinearLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>